# gutenberg-reader

./: .gitignore  LICENSE  README.md  pyproject.toml
gutenberg_reader/: __init__.py  cache.py  cli.py  config.py  models.py  ollama.py  pipeline.py  prompts.py  text_utils.py
gutenberg_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gutenberg_reader/stages/: __init__.py  s01_download.py  s02_discovery.py  s03_chapters.py  s04_characters.py  s05_segments.py  s06_critic.py  s07_assemble.py
